# gerador_readme

./: README.md  pyproject.toml
gerador_readme/: gerador.py
